--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  provider: 4.3.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  pedantic: 1.9.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
