--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   provider: 4.3.3
+  image_picker: 0.6.7+22
+  path_provider: 1.6.28
+  path: 1.8.0-nullsafety.1
 
 dev_dependencies:
   flutter_test:
