--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   image_picker: 0.6.7+22
   path_provider: 1.6.28
   path: 1.8.0-nullsafety.1
+  sqflite: 1.3.2+4
 
 dev_dependencies:
   flutter_test:
