--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   path_provider: 1.6.28
   path: 1.8.0-nullsafety.1
   sqflite: 1.3.2+4
+  location: 3.2.4
 
 dev_dependencies:
   flutter_test:
