--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   path: 1.8.0-nullsafety.1
   sqflite: 1.3.2+4
   location: 3.2.4
+  google_maps_flutter: 1.2.0
+  geocoding: 1.0.5
 
 dev_dependencies:
   flutter_test:
